# src/routes/index.ts
@@ -10,6 +10,7 @@ import { FriendRoutes } from '../app/modules/friend/friend.route'
 import { CommentRoutes } from '../app/modules/comment/comment.route'
 import { MessageRoutes } from '../app/modules/message/message.route'
 import { EventsRoutes } from '../app/modules/events/events.route'
+import { CategoryRoutes } from '../app/modules/category/category.route'
 
 const router = express.Router()
 
@@ -25,7 +26,8 @@ const apiRoutes: { path: string; route: Router }[] = [
   { path: '/comments', route: CommentRoutes },
   { path: '/message', route: MessageRoutes },
   { path: '/events', route: EventsRoutes }
-]
+,
+  { path: '/category', route: CategoryRoutes }]
 
 apiRoutes.forEach(route => {
   router.use(route.path, route.route)
